Fixing z-index issue

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h2 {
 }
 
 .header-phone {
+  z-index: -1;
   height: 500px;
   overflow: hidden;
   margin-right: 15px;
